# WgpuKmp-Template

./: Cargo.toml  README.md
app-surface/src/: lib.rs
ffi-run/: Cargo.toml
ffi-run/src/: lib.rs
ffi-run/src/platform/: android.rs  ios.rs
kmp/: settings.gradle.kts
kmp/composeApp/: build.gradle.kts
kmp/composeApp/src/androidMain/kotlin/com/wgpuapp/kmp/: MainActivity.kt  RustBridge.kt  WGPUTextureView.kt
kmp/composeApp/src/commonMain/kotlin/com/wgpuapp/kmp/: WgpuApp.kt
kmp/composeApp/src/iosMain/kotlin/com/wgpuapp/kmp/: MainViewController.kt  MetalView.kt  ShashlikMap.ios.kt  WgpuApp.ios.kt
kmp/demo/composeApp/: build.gradle.kts
kmp/demo/composeApp/src/androidMain/: AndroidManifest.xml
kmp/demo/composeApp/src/androidMain/kotlin/com/wgpuapp/demo/: MainActivity.kt
kmp/demo/composeApp/src/androidMain/res/values/: strings.xml
kmp/demo/composeApp/src/commonMain/kotlin/com/wgpuapp/demo/: App.kt
kmp/demo/iosApp/Configuration/: Config.xcconfig
kmp/demo/iosApp/iosApp/: MetalMapView.swift
kmp/demo/iosApp/iosApp.xcodeproj/: project.pbxproj
kmp/demo/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
kmp/gradle/: libs.versions.toml
kmp/iosApp/Configuration/: Config.xcconfig
kmp/iosApp/iosApp/: ContentView.swift
kmp/iosApp/iosApp.xcodeproj/: project.pbxproj
kmp/shared/: build.gradle.kts
kmp/shared/src/androidMain/kotlin/com/wgpuapp/kmp/: ShashlikMap.android.kt
kmp/shared/src/commonMain/kotlin/com/wgpuapp/kmp/: WgpuApp.kt
renderer/: Cargo.toml
renderer/src/: lib.rs
uniffi/: Cargo.toml
uniffi/src/: lib.rs
uniffi/src/platform/: android.rs  ios.rs
wgpu-app/: Cargo.toml
wgpu-app/src/: lib.rs  wgpu_surface.rs
wgpu-app/src/renderer/: depth_texture.rs  mod.rs
winit-run/: Cargo.toml
winit-run/src/: lib.rs  main.rs
(+1 files in other folders)
