[workspace]
resolver = "3"
members = ["winit-run", "wgpu-app", "app-surface", "uniffi"]

[workspace.dependencies]
app-surface = { path = "./app-surface", default-features = false }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
winit = { version = "0.30"}
wgpu = "28.0.0"
glam = "0.30"
futures-lite = "2"
raw-window-handle = "0.6"

# macOS, iOS
libc = { version = "0.2", default-features = false }
objc = "0.2.7"
core-graphics-types = "0.2"

# android target
android_logger = "0.15"
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.6"
