[package]
name = "winit-run"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu-app = { path = "../wgpu-app" }
env_logger = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
app-surface = { workspace = true, features = ["winit"] }
futures-lite = "2.6.1"